fixed overlapping of work history section onto contact section and add hover to contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,12 +72,11 @@ nav a {
     display: flex;
     margin-bottom: 20px;
     padding: 10px;
-    height: 300px;
     font-family: var(--textStyle2);
     color: #030202;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: end;
+    justify-content:center;
 }
 
 h3 {
@@ -108,6 +107,7 @@ h2{
     height: 300px;
     font-family: var(--textStyle2);
     color: #030202;
+    justify-content: left;
 }
 
 .contact ul{
@@ -125,6 +125,10 @@ h2{
     color: black;
 }
 
+.contact a:hover{
+    background-color: gray;
+}
+
 .content p{
     display: flex;
     flex-wrap: wrap;
@@ -136,6 +140,7 @@ h2{
 
 .content .first-project{
     display: 1 0 400px;
+    justify-content: center;
     margin-bottom: 20px;
     padding: 10px;
     height: 300px;
@@ -153,15 +158,8 @@ h2{
     border-width: 1px;
     border-color: var(--turtle);
     min-width: 300px;
-    justify-content: end;
+    justify-content: center;
 }
-
-.other-projects img{
-    width: auto;
-    min-width: 500px;
-}
-
-
 
 @media screen and (max-width: 992px) { 
     .other-projects{
